--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles.870d3fbbc4263838ef48.css"></head>
 <body style="position: relative">
   <app-root></app-root>
-<script src="runtime.ee2dcdf2e59a31c9da78.js" defer></script><script src="polyfills-es5.9d81a2f44a7b7d24fa36.js" nomodule defer></script><script src="polyfills.12ca9a83fefeb06975f9.js" defer></script><script src="scripts.5e8f7480f499e23d1bd4.js" defer></script><script src="main.64613596c72d27323698.js" defer></script></body>
+<script src="runtime-es2015.27965c48d77c449cb93c.js" type="module"></script><script src="polyfills-es2015.1ba6ee20d81f8df36c0b.js" type="module"></script><script src="runtime-es5.ee2dcdf2e59a31c9da78.js" nomodule defer></script><script src="polyfills-es5.e2d96b5727bcf7345bba.js" nomodule defer></script><script src="scripts.5e8f7480f499e23d1bd4.js" defer></script><script src="main-es2015.811909cfe57a3425a958.js" type="module"></script><script src="main-es5.d295a617f725d2b2e6fc.js" nomodule defer></script></body>
 </html>
